am extras conceptul de Interval intr-o clasa noua (type/interface nou: TS)